--- a/animal/index.html
+++ b/animal/index.html
@@ -3,10 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <!-- ㄴ swiper -->
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/main.js"></script>
+    <!-- ㄴ jquery-->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <!-- browser 상단 타이틀 왼쪽 아이콘 등록 -->
     <link rel="stylesheet" href="css/main.css">
     <title>동물보호센터</title>
 </head>
 <body>
-    <h2>안냐세용</h2>
+    <div id="wrap">
+        <header>
+            <div class="wrapper">
+                <h1 class="logo"><a href="index.html">Angel Animal Shelter</a></h1>
+                <nav class="gnb">
+                    <button class="gnb_open">메뉴열기</button>
+                    <div class="gnb_wrap">
+                        <!-- 1차 메뉴(최상위메뉴) = 1 depth 
+                            그 하위메뉴 = 2 depth
+                            하지만 class명은 숫자가 먼저 올 수 없다 -->
+                        <ul class="depth1">
+                            <li>
+                                <a href="#n">찾습니다</a>
+                                <ul class="depth2">
+                                    <li><a href="#n">분실신고</a></li>
+                                    <li><a href="#n">구조정보/목격담</a></li>
+                                </ul><!--depth2-->
+                            </li>
+                            <li><a href="#n">구조분양</a></li>
+                            <li><a href="#n">네트워크</a></li>
+                            <li><a href="#n">재회성공담</a></li>
+                            <li>
+                                <a href="#n">대처방법</a>
+                                <ul class="depth2">
+                                    <li><a href="#n">실종시 대처방법</a></li>
+                                    <li><a href="#n">구조시 대처방법</a></li>
+                                    <li><a href="#n">고양이에 대해</a></li>
+                                </ul><!--depth2-->
+                            </li>
+                        </ul><!--depth1-->
+                    </div><!--gnb_wrap-->
+                    <button class="gnb_close">메뉴닫기</button>
+                </nav>
+                <div class="tnb">
+                    <!-- mobile ver.에서는 검색 버튼을 눌러 검색 페이지로 이동 -->
+                    <a class="btn_open">검색 페이지 이동</a>
+                    <div class="search">
+                        <form> <!-- form & fieldset은 개발자가 수정/삭제 할 수 있음. 따라서 절대 선택자로 쓰면
+                                안됨.-->
+                            <fieldset>
+                                <div class="search_box">
+                                    <legend>검색어입력</legend>
+                                    <label for="keyword">검색어</label>
+                                    <input type="text" id="keyword" placeholder="검색">
+                                    <input type="submit">
+                                </div><!--search_box-->
+                            </fieldset>
+                        </form>
+                    </div><!--search-->
+                    <div class="link"><a href="http://www.dogcat-e.com/index.php?code=apply" target="_blank" title="새창열림">전단지</a></div><!--link-->
+                </div><!--tnb-->
+            </div><!--wrapper-->
+        </header>
+        <main class="container">
+            <section class="visual">
+                <h2>visual popup</h2> <!-- 이 section 영역을 대표하는 제목. 디자인상 존재하지 않음.
+                (css에서 display:none)-->
+                <div class="swiper">
+                    <ul class="swiper-wrapper">
+                        <li class="swiper-slide bg1">
+                            <div class="wrapper"><p>유기동물을 입양하고<br>그들의 영웅이 되세요</p></div>
+                        </li>
+                        <li class="swiper-slide bg2">
+                            <div class="wrapper">
+                                <div class="wrapper"><p>유기동물은<br>아직 발굴되지 않은<br>보석입니다</p></div>
+                            </div>
+                        </li>
+                        <li class="swiper-slide bg3">
+                            <div class="wrapper"><p>버려진 동물들에게<br>새로운 기회를 주세요</p></div>
+                        </li>
+                        <li class="swiper-slide bg4">
+                            <div class="wrapper"><p>당신의 새 가족이<br>당신을 기다립니다</p></div>
+                        </li>
+                        <li class="swiper-slide bg5">
+                            <div class="wrapper"><p>내 세상의 전부는<br>오직 당신 뿐이에요</p></div>
+                        </li>
+                    </ul>
+                    <div class="btn_wrap">
+                        <button class="btn_prev">이전 팝업 보기</button>
+                        <button class="btn_next">다음 팝업 보기</button>
+                        <button class="btn_pause">일시정지</button>
+                        <button class="btn_play">재생</button>
+                    </div><!--btn_wrap-->
+                </div><!--swiper-->
+            </section><!--visual-->
+            <section class="find"></section><!--find-->
+            <section class="campaign"></section><!--campaign-->
+            <section class="adoption"></section><!--adoption-->
+        </main><!--container-->
+        <footer></footer>
+    </div><!--wrap-->
 </body>
 </html>
